--- a/css/homepage.css
+++ b/css/homepage.css
@@ -55,7 +55,7 @@ body {
 
   html{
 
-    background:url('travel-agent.jpg') no-repeat center center fixed;
+    background:url('../images/travel-agent.jpg') no-repeat center center fixed;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	-o-background-size:cover;
